syntax = "proto2";

package person2;

enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
}

message PhoneNumber {
        required string str_number = 1;
        optional PhoneType enum_type = 2 [default = HOME];
}

message Address {
        required string str_block = 1;
        required string zip_code = 2;
}

message Person {
        required string str_name = 1;
        required int32 int32_id = 2;
        optional string str_email = 3;
        repeated PhoneNumber rpt_phone = 4;
        optional Address address = 5;
}
